--- a/index.html
+++ b/index.html
@@ -198,6 +198,8 @@
             <i class="fa-brands fa-pinterest"></i>
         </div>
     </section>
-    
+    <section class="footer">
+        <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+    </section>
 </body>
 </html>
