--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
     </section>
     <section class="footer">
         <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora iusto impedit earum sapiente, cum quidem nihil quo. Eveniet error sint vitae magnam maiores, eligendi cupiditate fugit, corrupti pariatur in ipsam?</p>
     </section>
 </body>
 </html>
